--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:weightSum="2"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,98 +14,89 @@
     tools:context="com.com220.sli.simonsays.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Score: "
-        android:id="@+id/textView"
-        android:layout_alignTop="@+id/button"
-        android:layout_alignLeft="@+id/button"
-        android:layout_alignStart="@+id/button"
-        android:layout_marginTop="73dp"
-        android:layout_x="115dp"
-        android:layout_y="444dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:id="@+id/score"
-        android:layout_alignTop="@+id/textView"
-        android:layout_alignLeft="@+id/bottomright_button"
-        android:layout_alignStart="@+id/bottomright_button"
-        android:layout_x="221dp"
-        android:layout_y="464dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Top Left"
-        android:textColor="#ffffff"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:id="@+id/topleft_button"
-        android:background="#990000"
-        android:layout_alignTop="@+id/topright_button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_x="90dp"
-        android:layout_y="29dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Top Right"
-        android:textColor="#ffffff"
-        android:background="#009900"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:id="@+id/topright_button"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/bottomright_button"
-        android:layout_alignEnd="@+id/bottomright_button"
-        android:layout_x="215dp"
-        android:layout_y="89dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bottom Left"
-        android:textColor="#ffffff"
-        android:background="#000099"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:id="@+id/bottomleft_button"
-        android:layout_below="@+id/topleft_button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_x="35dp"
-        android:layout_y="205dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bottom Right"
-        android:textColor="#ffffff"
-        android:background="#500050"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:id="@+id/bottomright_button"
-        android:layout_alignBottom="@+id/bottomleft_button"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_x="210dp"
-        android:layout_y="213dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start Game"
         android:id="@+id/start"
-        android:layout_marginBottom="161dp"
+        android:layout_gravity="center_vertical"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_x="122dp"
-        android:layout_y="357dp" />
+        android:layout_alignRight="@+id/bottomleft_button"
+        android:layout_alignEnd="@+id/bottomleft_button"
+        android:layout_marginBottom="187dp" />
 
-</AbsoluteLayout>
+    <Button
+        android:id="@+id/topleft_button"
+        android:text="Top Left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
+        android:background="#990000"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Score: "
+        android:id="@+id/textView"
+        android:layout_gravity="center_vertical"
+        android:layout_alignBottom="@+id/start"
+        android:layout_toRightOf="@+id/start"
+        android:layout_toEndOf="@+id/start" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:id="@+id/score"
+        android:layout_x="221dp"
+        android:layout_y="464dp"
+        android:layout_gravity="center_vertical"
+        android:layout_alignTop="@+id/textView"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/topright_button"
+        android:text="Top Right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
+        android:background="#009900"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_above="@+id/bottomright_button"
+        android:layout_alignRight="@+id/bottomright_button"
+        android:layout_alignEnd="@+id/bottomright_button" />
+
+    <Button
+        android:id="@+id/bottomleft_button"
+        android:text="Bottom Left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
+        android:background="#000099"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_below="@+id/topleft_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/bottomright_button"
+        android:text="Bottom Right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
+        android:background="#500050"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_below="@+id/topleft_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+</RelativeLayout>
